--- a/software.html
+++ b/software.html
@@ -39,8 +39,32 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://caresyntax.join.com/jobs/476323-java-software-engineer-iot-product-m-f-d-berlin'>Job @ caresyntax (Berlin): Java Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://jobs.lever.co/payfactors/fca06ecf-25ab-4bac-83b0-201fc34419a5'>Payfactors - Associate Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/castlighthealth/job/o0Ctbfw0'>Castlight Health Careers - Front End Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4479031002'>Job Application for Managing Software Engineer (remote) at Ad Hoc</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zattoo.join.com/jobs/471774-software-engineer-golang'>Job @ Zattoo (Berlin): Software Engineer (Golang) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/ncsoftwest/jobs/1930473'>Job Application for Lead Software Engineer at NCSOFT</a></h5> 
+<p><span class="badge badge-light">Bellevue, WA  Seoul Australia New Zealand</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/GIANTSSoftwareGmbH/743999676818439-senior-software-engineer-c-core-game-engine'>GIANTS Software GmbH Senior Software Engineer (C++) - Core Game Engine | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Schlieren, Switzerland  Erlangen, Germany</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://caresyntax.join.com/jobs/476323-java-software-engineer-iot-product-m-f-d-berlin'>Job @ caresyntax (Berlin): Java Software Engineer ... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin Berlin, Germany  Boston Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://sevensenders.softgarden.io/job/4808973/Software-Engineer-PHP,-Backend-Transportation-Network-m-f-d-?jobDbPVId=13157963&amp;l=en'>Software Engineer (PHP, Backend) - Transportation Network (m/f/d)</a></h5> 
@@ -59,7 +83,7 @@
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/coupa/35652600-6324-4439-bd48-4578279a29c0'>Coupa Software, Inc. - Senior Software Engineer in Test</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coupa/35652600-6324-4439-bd48-4578279a29c0'>Coupa Software, Inc. - Senior Software Engineer in Test</a></h5> 
 <p><span class="badge badge-light">Cincinnati</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -203,7 +227,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698685664-software-engineer'>City of Philadelphia Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698685664-software-engineer'>City of Philadelphia Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -231,7 +255,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -291,7 +315,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/jerry/j/063AAF8DD9/'>Senior Software Developer - Jerry</a></h5> 
+<h5><a href='https://apply.workable.com/jerry/j/063AAF8DD9/'>Senior Software Developer - Jerry</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -299,7 +323,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/impinj/job/ol0nbfwD?utm_source=bambu&utm_medium=social&utm_campaign=advocacy&blaid=265656'>Impinj Careers - Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/impinj/job/ol0nbfwD?utm_source=bambu&utm_medium=social&utm_campaign=advocacy&blaid=265656'>Impinj Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -311,7 +335,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
+<h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -327,11 +351,11 @@
 <p><span class="badge badge-light">Dallas, Texas  Dallas, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/324fa271-3bc4-4c78-9fb8-f58a93fb90c9'>Couchbase - Software Engineer - GO</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/324fa271-3bc4-4c78-9fb8-f58a93fb90c9'>Couchbase - Software Engineer - GO</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/9918e703-bdc4-4ce2-909b-8b317c94f441'>Couchbase - Software Engineer - GO</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/9918e703-bdc4-4ce2-909b-8b317c94f441'>Couchbase - Software Engineer - GO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -363,7 +387,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nbfCqMwJ'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nbfCqMwJ'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -389,7 +413,7 @@
 <p><span class="badge badge-light">Burlington, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -416,30 +440,6 @@
 <h5><a href='https://itatalentportal.com/job/full-stack-software-engineer/49137473/'>Full-Stack Software Engineer Job Opening in Chicago, Illinois - Illinois Technology Association Career Center</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/cision-canada/job/o2lg9fww'>Cision Canada Careers - Senior Software Developer</a></h5> 
-<p><span class="badge badge-light">Canada Canada Ottawa, Ontario</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light">Denver, Colorado</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Denver, Colorado</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
-<p><span class="badge badge-light">United States  San Jose, CA</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500536002'>Job Application for Principal Software Engineer at MedMen</a></h5> 
-<p><span class="badge badge-light">Culver City, CA</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500544002'>Job Application for Staff Software Engineer at MedMen</a></h5> 
-<p><span class="badge badge-light">Culver City, CA</span></p>
-<p>Posted on: 2019-11-01</p>
 <hr/>
 
 
