--- a/machine.html
+++ b/machine.html
@@ -79,6 +79,12 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
+<h5><a href='http://jobs.jobvite.com/idtus/job/oG8obfw7'>Innovative Defense Technologies (IDT) Careers - Machine Learning ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 20, 2019 ... The Machine Learning Software Engineer position offers an engineer the 
+opportunity to utilize his/her knowledge and talents as part of a collaborative 
+team?...</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/agoda/jobs/1937117'>Job Application for Senior Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -141,7 +147,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -157,11 +163,11 @@
 <p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698508701-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698508701-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
+<h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -173,7 +179,7 @@
 <p><span class="badge badge-light">Richmond, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698490982-machine-learning-engineer-remote'>DataFactory Machine Learning Engineer - Remote | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698490982-machine-learning-engineer-remote'>DataFactory Machine Learning Engineer - Remote | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -259,7 +265,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698156568-head-of-machine-learning'>Omio Head of Machine Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698156568-head-of-machine-learning'>Omio Head of Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -298,7 +304,7 @@ the center of our core mission, building state of the art technologies. You will
 reinforcement learning and transfer learning) to real world problems. Provide 
 research?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
@@ -311,7 +317,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
+<h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 hours ago ... Hands-on experience using one of the following deep learning libraries: 
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
@@ -372,11 +378,11 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://chiselai.applytojob.com/apply/QigNU3K1y8/Machine-Learning-Scientist'>Machine Learning Scientist - Chisel AI - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chiselai.applytojob.com/apply/QigNU3K1y8/Machine-Learning-Scientist'>Machine Learning Scientist - Chisel AI - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Machine Learning Scientist at Chisel AI in Toronto, Ontario, Canada.</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en-us/rssfeed.do?functionName=viewFromLink&jobPostId=41792&localeCode=en-us&rssFeedId=2064297'>Machine Learning Ecosystem Intern - Cambridge ... - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en-us/rssfeed.do?functionName=viewFromLink&jobPostId=41792&localeCode=en-us&rssFeedId=2064297'>Machine Learning Ecosystem Intern - Cambridge ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Machine Learning Ecosystem Intern Cambridge; Senior Content Marketer 
 Cambridge; Senior Manager, Outbound Marketing, ML San Jose (CA); Senior 
@@ -391,7 +397,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
 <p><span class="badge badge-light">Mc Lean, Virginia</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -487,10 +493,6 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697738897-researcher-machine-learning-for-intelligent-systems-rtc-ai-'>Bosch Group Researcher ? Machine Learning for Intelligent Systems (RTC -AI) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
-<p>Posted on: 2019-10-20</p>
-<hr/>
-<h5><a href='https://verticalscale.join.com/jobs/440723-machine-learning-engineer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Machine Learning ... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
 
